--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
     <title>Word mixer!</title>
 </head>
 <body>
+
+
+
+    <!-- This is a comment!!-->
     <h1>Word Mixer!</h1>
     <input type="text" id="text1">
     <button id="button">Mix</button>
